--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Карта лагеря — кликабельные зоны</title>
+  <title>Карта лагеря</title>
   <style>
     :root { --brand:#CF2C02; --house:#0aa; }
     * { box-sizing:border-box }
